# ECPCfinalparty

./: README.md  measurments.csv  pyproject.toml
src/: controller.py  gui.py  model.py  view.py
src/party/: controller.py  gui.py  mainwindow.ui  model.py  ui_mainwindow.py  view.py
