[tool.poetry]
name = "party"
version = "0.1.0"
description = ""
authors = ["Salmauva <135599070+Salmauva@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "party", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
nsp2visasim = "^1.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
