[tool.poetry]
name = "party"
version = "0.1.0"
description = ""
authors = ["Salmauva <135599070+Salmauva@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "party", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
pyvisa-py = "^0.7.1"
pyserial = "^3.5"


[tool.poetry.group.dev.dependencies]
nsp2visasim = "^1.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
