[tool.poetry]
name = "party"
version = "0.1.0"
description = ""
authors = ["Salmauva <135599070+Salmauva@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "party", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
pyvisa-py = "^0.7.1"
pyserial = "^3.5"
pyside6 = "^6.6.1"
pyqtgraph = "^0.13.3"


[tool.poetry.group.dev.dependencies]
nsp2visasim = "^1.3.1"
poethepoet = "^0.24.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks.compile]
shell = """
pyside6-uic src/party/mainwindow.ui -o src/party/ui_mainwindow.py
"""
interpreter = ["posix", "powershell"]